--- a/GolfingStats/GolfingStats.iOS/Resources/LaunchScreen.storyboard
+++ b/GolfingStats/GolfingStats.iOS/Resources/LaunchScreen.storyboard
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="X5k-f2-b5h" launchScreen="YES">
     <device id="ipad12_9" orientation="portrait">
         <adaptation id="fullscreen"/>
@@ -25,7 +25,7 @@
                                 <rect key="contentStretch" x="1" y="1" width="1" height="1"/>
                                 <autoresizingMask key="autoresizingMask" heightSizable="YES" widthSizable="YES" flexibleMinX="YES" flexibleMinY="YES"/>
                             </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="928" translatesAutoresizingMaskIntoConstraints="NO" image="Icon-76.png" adjustsImageSizeForAccessibilityContentSizeCategory="YES" insetsLayoutMarginsFromSafeArea="NO">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="928" translatesAutoresizingMaskIntoConstraints="NO" image="iTunes.png" adjustsImageSizeForAccessibilityContentSizeCategory="YES" insetsLayoutMarginsFromSafeArea="NO">
                                 <rect key="frame" x="936" y="1274" width="72" height="72"/>
                                 <rect key="contentStretch" x="1" y="1" width="1" height="1"/>
                                 <constraints>
@@ -58,7 +58,6 @@
     </scenes>
     <resources>
         <image name="Icon-60.png" width="60" height="60"/>
-        <image name="Default-568h.png" width="320" height="568"/>
         <image name="Default-Portrait.png" width="768" height="1004"/>
         <image name="Default.png" width="320" height="480"/>
         <image name="Icon-76.png" width="76" height="76"/>
@@ -66,5 +65,9 @@
         <image name="Icon-Small.png" width="29" height="29"/>
         <image name="SplashFlag.png" width="1074" height="2157"/>
         <image name="SplashFull.png" width="2977" height="2157"/>
+        <image name="iTunes.png" width="512" height="512"/>
+        <image name="Icon-1024.png" width="1024" height="1024"/>
+        <image name="Icon-20.png" width="20" height="20"/>
+        <image name="Icon-83.5.png" width="83.5" height="83.5"/>
     </resources>
 </document>
